--- a/src/main/resources/template/collectors_page/login.html
+++ b/src/main/resources/template/collectors_page/login.html
@@ -49,17 +49,15 @@
                 </div>
                 <div class="mt-3">
                   <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">로그인</a>
+                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../register.html">회원가입</a>
                 </div>
-                <div class="my-2 d-flex justify-content-between align-items-center">
-                  <a href="#" class="auth-link text-black">비밀번호 찾기</a>
-                </div>
-                <div class="mb-2">
+                <!-- <div class="mb-2">
                   <button type="button" class="btn btn-block btn-facebook auth-form-btn">
                     <i class="ti-facebook me-2"></i>Connect using facebook
                   </button>
-                </div>
+                </div> -->
                 <div class="text-center mt-4 fw-light">
-                  아직 회원이 아니세요? <a href="register.html" class="text-primary"> 회원가입</a>
+                  비밀번호가 생각이 안나세요? <a href="register.html" class="text-primary"> 비밀번호 찾기</a>
                 </div>
               </form>
             </div>
