[이수정] 오타 수정

--- a/src/main/resources/templates/thymeleaf/index3.html
+++ b/src/main/resources/templates/thymeleaf/index3.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>collectors thyneleaf</div>
+    <div>collectors thymeleaf</div>
 </body>
 </html>
