[이수정] 휴대폰번호 정규식 적용
- 휴대폰번호 정규식 추가 000-0000-0000

- 아이디 인증 체크 icon css 추가

--- a/src/main/webapp/resources/template/collectors_css/style-detail.css
+++ b/src/main/webapp/resources/template/collectors_css/style-detail.css
@@ -11,3 +11,14 @@
     float: right;
 }
 
+.checkIcon {
+    width: 16px;
+    height: 8px;
+    border: 2px solid darkblue;
+    border-top:0;
+    border-right:0;
+    margin-bottom: 4px;
+    transform: rotate(-45deg);
+    transform-origin: 25% 25%;
+
+}
